syntax = "proto3";

import "google/protobuf/timestamp.proto";
package ru.spbau.mit;

message ProtocolMessage {
    string name = 1;
    string date = 2;
    string message = 3;
}

message ServerMessage {
    ProtocolMessage message = 1;
}

service ChatService {
    rpc chat(stream ProtocolMessage) returns (stream ServerMessage);
}